Aside + HomeView Updates

--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,3 +1,15 @@
 // $bg-color: #44426e;
 $bg-color: #fff;
 $main-color: #e99e75;
+
+// LoadingScreen
+$boxColor: #381902;
+$waterFColor: #e3954d;
+$waterBColor: #ffe0c7;
+
+// $boxColor: #020438;
+// $waterFColor: #4d6de3;
+// $waterBColor: #c7eeff;
+
+// LogoColor
+$logo-aside-color: #381902;
